fix: correct the tooltip theme and the style of the collapse tag

--- a/packages/theme-chalk/src/input-tag.scss
+++ b/packages/theme-chalk/src/input-tag.scss
@@ -101,6 +101,10 @@
     );
   }
 
+  @include e(input-tag-collapse) {
+    line-height: 1;
+  }
+
   @include e(input-tag-list) {
     position: relative;
     display: flex;
